# nuclea_r_os

./: Cargo.toml  Makefile  x86_64-nuclea_r_os.json
.cargo/: config.toml
src/: gdt.rs  interrupts.rs  lib.rs  main.rs  qemu.rs  serial.rs  vga.rs
src/memory/: heap.rs  mod.rs  paging.rs
src/output/: serial.rs  vga.rs
src/pic/: keyboard.rs  timer.rs
src/task/: executor.rs  keyboard.rs  mod.rs  simple_executor.rs
tests/: basic_boot.rs  heap_allocation.rs  should_panic.rs  stack_overflow.rs
