[package]
authors = ["NucleaTNT <https://github.com/NucleaTNT>"]
edition = "2021"
name = "nuclea_r_os"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9.8"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
